# url-shortener

./: .env-template  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  conftest.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 2025_02_04_2246-7133b9d8f29f_baseline_migrations.py  2025_02_09_2132-a7f3c002ea8b_migrations.py  2025_02_10_2048-33f6861bdd74_migrations.py
postgres-init/: init.sql
tests/: test_auth.py  test_core.py  test_urls.py
url_shortener/: handlers.py
url_shortener/config/: db.py  dependencies.py  settings.py
url_shortener/domain/: __init__.py
url_shortener/domain/auth/: enums.py  models.py  schemas.py  services.py
url_shortener/domain/common/: models.py
url_shortener/domain/urls/: models.py  schemas.py  services.py
url_shortener/routers/: api.py  auth.py  urls.py
