[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core>=1",
]

[tool.poetry]
name = "url_shortener"
version = "0.1.0"
description = ""
authors = ["PanMartinez <marcinplotka88@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.115.5"}
pyjwt = "^2.10.1"
psycopg2-binary = "^2.9.10"
sqlalchemy = "2.0.36"
alembic = "^1.14.0"
pydantic = "2.10.2"
pydantic_settings = "^2.6.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-dotenv = "^1.0.1"
mypy = "^1.13.0"
types-passlib = "^1.7.7.20240819"
httpx = "^0.28.1"

[tool.poetry.dev-dependencies]
pre-commit = "^4.0.1"
pytest = "^8.3.3"

[tool.mypy]
python_version = "3.13"
strict_optional = true
files = [
  ".",
]
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
